--- a/src/main/resources/producer.properties
+++ b/src/main/resources/producer.properties
@@ -7,5 +7,7 @@ client.id=clKafkaProd
 serializer.class=kafka.serializer.StringEncoder
 key.serializer.class=kafka.serializer.StringEncoder
 
+partitioner.class=com.demo.KafkaProducer.MyPartitioner
+
 # Need acknowledgement
 request.required.acks=1
